GC rebalancing